base/postgresql/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: db
    name: db
  selector:
    run: postgresql
